test/conformance/chainsaw/validate/clusterpolicy/standard/cel-deprecated/parameter-resources/namespaced/match-clusterscoped-resource/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: testing-01
