test/conformance/chainsaw/validate/clusterpolicy/standard/cel-deprecated/parameter-resources/namespaced/match-clusterscoped-resource/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: match-clusterscoped-resource
spec:
  concurrent: false
  steps:
  - name: step-01
    try:
    - apply:
        file: crd.yaml
    - assert:
        file: crd-assert.yaml
  - name: step-02
    try:
    - apply:
        file: nameConstraint.yaml
    - assert:
        file: nameConstraint.yaml
  - name: create policy
    use:
      template: ../../../../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../../../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: check-namespace-name-02
  - name: step-04
    try:
    - apply:
        expect:
        - check:
            ($error != null): true
        file: ns.yaml
